# gauss-newton-rs

./: Cargo.toml  README.md
src/: lib.rs
src/nalgebra_ver/: mod.rs  optimize.rs  problem.rs  solver.rs
src/ndarray_ver/: mod.rs  optimize.rs  problem.rs  solver.rs
tests/: nalgebra_ver.rs  ndarray_ver.rs
