[package]
name = "gauss-newton-rs"
version = "0.1.0"
authors = ["Yuma Hiramatsu"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.19"
ndarray = "0.12"
ndarray-linalg = { version = "0.11", features = ["netlib"] }
num-traits = "0.2"

[dev-dependencies]
approx = "0.3"
